@@ -31,7 +31,6 @@ using System;
 using System.Threading;
 
 using Hyena;
-using Banshee.Base;
 using Banshee.MediaEngine;
 using Banshee.ServiceStack;
 
